Use Fragment for React non-JSX tag helpers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Timestamper</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://cdn.jsdelivr.net/gh/TomasHubelbauer/fragment@master/index.js" defer></script>
     <!-- Note that this script cannot be `type="module"` because it breaks `localhost` in Chrome -->
     <script src="index.js"></script>
     <link href="index.css" rel="stylesheet" />
